# DistributedGame

./: .gitignore  CMakeLists.txt  README.md
src/: client.c  main.c  server.c
src/game/: game.c  game.h
src/player/: player.c  player.h
src/server/: client.c  client_handler.c  server.c  server.h  server_utils.c
src/utils/: addr_utils.c  addr_utils.h  linked_list.c  linked_list.h  parser.c  parser.h
tests/: CMakeLists.txt
tests/linked_list/: CMakeLists.txt  LinkedListTests.hpp  tester.c  tester.cpp
tests/server_utils/: CMakeLists.txt  tester.cpp
tests/servers/: main.c
